--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Science+Gothic:wght@100..900&display=swap');
 @import "tailwindcss";
 
 .science {
   font-family: "Science Gothic", sans-serif;
 
+}
+.font-outfit {
+  font-family: "Outfit", sans-serif;
+}
+.font-ply {
+  font-family: "Playfair", sans-serif;
 }
